# Rust-PCDashboard

./: Cargo.toml  LICENSE
src/: main.rs
src/elements/: mod.rs  ping_button.rs
src/structs/: app.rs  mod.rs  ping_controller.rs  ping_settings.rs
