[package]
name = "NetController"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.2.0"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
log = { version = "0.4.29", features = ["max_level_trace"] }
ping-rs = "0.1.2"
simple_logger = "5.1.0"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
wfp = "0.0.3"
